<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/white"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="115dp">

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="serif"
            android:text="@string/message"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#C12222"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/messageName"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:text="@string/messageName"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="casual"
                android:hint="@string/write_your_name"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/id"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/id_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="casual"
                android:hint="@string/write_your_id"
                android:inputType="textPersonName"
                android:autofillHints="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/Choose_Candidate"
                android:layout_width="296dp"
                android:layout_height="48dp"
                android:layout_margin="14dp"
                android:background="@color/white"
                android:dropDownWidth="wrap_content"
                android:dropDownSelector="@android:drawable/btn_dropdown"
                android:entries="@array/ChooseCandidate"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">


            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="119dp"
                android:layout_height="match_parent"

                android:text="@string/toggle_button"
                android:textOff="@string/accept"
                android:textOn="@string/refuse" />

            <Button
                android:id="@+id/button2"
                android:layout_width="263dp"
                android:layout_height="match_parent"
                android:onClick="vote"
                android:text="@string/btn_text2"
                android:textAlignment="inherit"
                app:backgroundTint="#8A8686" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>